--- a/ShopApp.WebUI/ShopApp.WebUI.csproj
+++ b/ShopApp.WebUI/ShopApp.WebUI.csproj
@@ -179,6 +179,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ShopApp.Business\ShopApp.Business.csproj" />
     <ProjectReference Include="..\ShopApp.Data\ShopApp.Data.csproj" />
     <ProjectReference Include="..\ShopApp.Entity\ShopApp.Entity.csproj" />
   </ItemGroup>
