--- a/ShopApp.WebUI/appsettings.json
+++ b/ShopApp.WebUI/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "EmailSender": {
+    "Host": "smtp.office365.com",
+    "Port": 587,
+    "EnableSSL": true,
+    "UserName": "parviz.hajili@hotmail.com",
+    "Password": "Azerbaycan800"
+  },
   "AllowedHosts": "*"
 }
