--- a/ShopApp.WebUI/appsettings.json
+++ b/ShopApp.WebUI/appsettings.json
@@ -10,8 +10,8 @@
     "Host": "smtp.office365.com",
     "Port": 587,
     "EnableSSL": true,
-    "UserName": "parviz.hajili@hotmail.com",
-    "Password": "Azerbaycan800"
+    "UserName": "mail",
+    "Password": "password"
   },
   "AllowedHosts": "*"
 }
