--- a/ShopApp.WebUI/appsettings.json
+++ b/ShopApp.WebUI/appsettings.json
@@ -13,5 +13,13 @@
     "UserName": "mail",
     "Password": "password"
   },
+  "Data": {
+    "AdminUser": {
+      "username": "admin",
+      "password": "Admin123",
+      "email": "shopapp@gmail.com",
+      "role": "Admin"
+    }
+  },
   "AllowedHosts": "*"
 }
