Simple Changes Add to Cart Button

--- a/ShopApp.WebUI/appsettings.json
+++ b/ShopApp.WebUI/appsettings.json
@@ -16,7 +16,7 @@
   "Data": {
     "AdminUser": {
       "username": "admin",
-      "password": "Admin123",
+      "password": "password",
       "email": "shopapp@gmail.com",
       "role": "Admin"
     }
