--- a/ShopApp.WebUI/appsettings.json
+++ b/ShopApp.WebUI/appsettings.json
@@ -21,5 +21,9 @@
       "role": "Admin"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlLiteConnection": "Data Source=shopDb",
+    "MssSqlConnection": ""
+  }
 }
