--- a/ShopApp.WebUI/appsettings.json
+++ b/ShopApp.WebUI/appsettings.json
@@ -10,16 +10,29 @@
     "Host": "smtp.office365.com",
     "Port": 587,
     "EnableSSL": true,
-    "UserName": "mail",
-    "Password": "password"
+    "UserName": "email",
+    "Password": "Test800800"
   },
   "Data": {
-    "AdminUser": {
-      "username": "admin",
-      "password": "password",
-      "email": "shopapp@gmail.com",
-      "role": "Admin"
-    }
+    "Roles": [ "Admin", "Customer" ],
+    "Users": [
+      {
+        "username": "adminuser",
+        "password": "Shop123",
+        "email": "adminuser@gmail.com",
+        "role": "Admin",
+        "firstname": "Admin",
+        "lastname": "Admin"
+      },
+      {
+        "username": "customeruser",
+        "password": "Shop123",
+        "email": "customer@gmail.com",
+        "role": "Customer",
+        "firstname": "Customer",
+        "lastname": "Customer"
+      }
+    ]
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
