Change Database to MsSql Server

--- a/ShopApp.WebUI/appsettings.json
+++ b/ShopApp.WebUI/appsettings.json
@@ -37,6 +37,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlLiteConnection": "Data Source=shopDb",
-    "MssSqlConnection": ""
+    "MsSqlConnection": "Data Source=Localhost; Initial Catalog=ShopAppDb;Integrated Security=true"
   }
 }
