Add Web.Api project

--- a/ShopApp.WebUI/appsettings.json
+++ b/ShopApp.WebUI/appsettings.json
@@ -10,7 +10,7 @@
     "Host": "smtp.office365.com",
     "Port": 587,
     "EnableSSL": true,
-    "UserName": "email",
+    "UserName": "test6640@hotmail.com",
     "Password": "Test800800"
   },
   "Data": {
@@ -37,6 +37,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlLiteConnection": "Data Source=shopDb",
-    "MsSqlConnection": "Data Source=Localhost; Initial Catalog=ShopAppDb;Integrated Security=true"
+    "MsSqlConnection": "server=mssql.sadikturan.tk; database=shopapp; User Id=shopapp; password=Azerbaycan@800;"
   }
 }
